--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='{{site.url}}/home'" />
-
+    <!-- <meta http-equiv="refresh" content="0; url='{{site.url}}/home'" />
+    <meta charset="utf-8"> -->
+    <title>Redirecting to my portfolio website</title>
+    <meta http-equiv="refresh" content="0; URL=https://www.notion.so/Home-b84f414f74424eb1acb745bf0a542fad?pvs=32">
+    <link rel="canonical" href="https://www.notion.so/Home-b84f414f74424eb1acb745bf0a542fad?pvs=32">
   </head>
   <body>
     <!-- <div id="element" style="width: 600px; height: 360px; margin-bottom: 10px;"> </div>
